--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{% block title %}{%endblock%} - Print.r</title>
+	<title>{% block title %}{%endblock%} - Printr</title>
 </head>
 <body>
 	<nav class="navbar is-fixed-top" role="navigation" aria-label="dropdown navigation">
 		<div class="navbar-brand">
 			<a class="navbar-item" href="https://bulma.io">
-				<img src="https://bulma.io/images/bulma-logo.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="112" height="28">
+				<img src="/logo.png" alt="Printr">
 			</a>
 		</div>
 		<div class="navbar-end has-dropdown">
